# Numerical

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  README.rst  _execution_timer_8hpp.html  _execution_timer_8hpp_source.html  _f_d_mesh_8cpp.html  _f_d_mesh_8hpp.html  _f_d_mesh_8hpp_source.html  _f_d_problem_8cpp.html  _f_d_problem_8hpp.html  _f_d_problem_8hpp_source.html  _f_e_mesh_8cpp.html  _f_e_mesh_8hpp.html  _f_e_mesh_8hpp_source.html  _f_e_problem_8cpp.html  _f_e_problem_8hpp.html  _f_e_problem_8hpp_source.html  _f_v_mesh_8cpp.html  _f_v_mesh_8hpp.html  _f_v_mesh_8hpp_source.html  _f_v_problem_8cpp.html  _f_v_problem_8hpp.html  _f_v_problem_8hpp_source.html  _f_v_solver_8cpp.html  _f_v_solver_8hpp.html  _f_v_solver_8hpp_source.html  _finite_element_8cpp.html  _finite_element_8hpp.html  _finite_element_8hpp_source.html  _parameters_8cpp.html  _parameters_8hpp.html  _parameters_8hpp_source.html  _sparse_solver_8cpp.html  _sparse_solver_8hpp.html  _sparse_solver_8hpp_source.html  _utils_8hpp.html  _utils_8hpp_source.html  annotated.html  (+89 more)
bench/diffusion/: CMakeLists.txt  diffusion.hpp  fdm_diffusion_a.cpp  fdm_diffusion_b.cpp  fdm_diffusion_c.cpp  fdm_diffusion_d.cpp  run.cpp
bench/performances/: CMakeLists.txt  Performances.cpp  Performances.hpp  run.cpp
cmake/: CodeCoverage.cmake  FindCatch2.cmake  FindEigen3.cmake  Findspdlog.cmake
cmake.config/: NumericalConfig.h.in
doc/: CMakeLists.txt  Doxyfile.in  fdm.md  fem.md  footer.html  fvm.md  header.html  main.md
doc/images/: bloc.eps
numerical/: CMakeLists.txt  numerical.hpp
numerical/common/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  Problem.hpp  Solver.cpp  Solver.hpp  common.hpp
numerical/fdm/: CMakeLists.txt  FDMesh.cpp  FDMesh.hpp  FDProblem.cpp  FDProblem.hpp  Mesh.cpp  Mesh.hpp  NLSparseSolver.cpp  NLSparseSolver.hpp  Parameters.cpp  Parameters.hpp  Problem.cpp  Problem.hpp  SparseSolver.cpp  SparseSolver.hpp  fdm.hpp
numerical/fem/: CMakeLists.txt  FEMesh.cpp  FEMesh.hpp  FEProblem.cpp  FEProblem.hpp  FiniteElement.cpp  FiniteElement.hpp  fem.hpp
numerical/fvm/: CMakeLists.txt  FVMesh.cpp  FVMesh.hpp  FVProblem.cpp  FVProblem.hpp  FVSolver.cpp  FVSolver.hpp  fvm.hpp
python/: CMakeLists.txt
python/src/: main.cpp
scripts/: diffusion.py
search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_7.js  files_8.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+21 more)
tests/: CMakeLists.txt
tests/fdm/: FDMeshTest.cpp  FDProblemTest.cpp  MeshTest.cpp  NLSparseSolverTest.cpp  ParametersTest.cpp  ProblemTest.cpp  SparseSolverTest.cpp
tests/fem/: FEMeshTest.cpp  FEProblemTest.cpp  FiniteElementTest.cpp
tests/fvm/: FVMeshTest.cpp  FVProblemTest.cpp  FVSolverTest.cpp
tests/utils/: ExecutionTimerTest.cpp  UtilsTest.cpp
utils/: CMakeLists.txt  ExecutionTimer.hpp  Utils.hpp
